crates/renyi_syntax/src/parser.rs
//! The parser: tokens to the AST of `ast.rs`, following the clause grammar of
//! the syntax sketch.
//!
//! Line structure matters, indentation does not (decisions C2 and V2). A
//! statement or clause ends at a line break unless a bracket is open or the
//! next line begins with a continuation word (`where`, `sorted by`,
//! `group by`, `collect`, `sum`, `count`, `first`, `any`, `all`, `returns`,
//! `or fails with`, `needs`, `for any`, `with`, `and`, `or`, and in an
//! `example:` `is` and `fails`). `otherwise` is not one: at the start of a
//! line it opens the branch of an `if` or `match`. The value after `be` or
//! `to` may start on the next line; `return` keeps its value on its line.

use crate::ast::*;
use crate::diagnostics::Diagnostic;
use crate::lexer::lex;
use crate::span::Span;
use crate::token::{TextPart, Token, TokenKind, Word};

#[derive(Debug)]
pub struct Parsed {
    pub module: Module,
    pub diagnostics: Vec<Diagnostic>,
}

/// Lex and parse one module.
pub fn parse(source: &str) -> Parsed {
    parse_with(source, false)
}

/// Lex and parse a declaration file: a module whose functions have no
/// bodies, as the standard library declares its types and signatures.
pub fn parse_declarations(source: &str) -> Parsed {
    parse_with(source, true)
}

fn parse_with(source: &str, declarations: bool) -> Parsed {
    let lexed = lex(source);
    let mut comments = Vec::new();
    let tokens: Vec<Token> = lexed
        .tokens
        .into_iter()
        .filter(|token| {
            if token.kind == TokenKind::Comment {
                comments.push(token.span);
                false
            } else {
                true
            }
        })
        .collect();
    let mut parser = Parser {
        src: source,
        declarations,
        tokens,
        pos: 0,
        diagnostics: lexed.diagnostics,
        nesting: 0,
    };
    let mut module = parser.module();
    module.comments = comments;
    Parsed {
        module,
        diagnostics: parser.diagnostics,
    }
}

/// Parse a run of tokens as one expression (used for interpolation holes).
fn parse_hole(src: &str, tokens: Vec<Token>, diagnostics: &mut Vec<Diagnostic>) -> Expr {
    let span = tokens
        .first()
        .map(|first| first.span.join(tokens.last().unwrap().span))
        .unwrap_or_default();
    let mut tokens = tokens;
    tokens.push(Token::new(TokenKind::Eof, Span::new(span.end, span.end)));
    let mut parser = Parser {
        src,
        declarations: false,
        tokens,
        pos: 0,
        diagnostics: Vec::new(),
        nesting: 1,
    };
    let expr = parser.expr().unwrap_or(Expr {
        kind: ExprKind::Nothing,
        span,
    });
    if !parser.at(&TokenKind::Eof) {
        let span = parser.peek().span;
        parser.error("hole-syntax", "a hole holds exactly one expression", span);
    }
    diagnostics.extend(parser.diagnostics);
    expr
}

struct Parser<'s> {
    src: &'s str,
    /// Functions have no bodies (a library declaration file).
    declarations: bool,
    tokens: Vec<Token>,
    pos: usize,
    diagnostics: Vec<Diagnostic>,
    /// Open brackets: line breaks inside them carry no meaning.
    nesting: usize,
}

/// Words that continue a statement or clause from the start of the next line.
/// `otherwise` is not one: at the start of a line it is the branch of an `if`
/// or `match` (decision V2).
const CONTINUATION_WORDS: &[Word] = &[
    Word::Where,
    Word::SortedBy,
    Word::GroupBy,
    Word::Collect,
    Word::Sum,
    Word::Count,
    Word::First,
    Word::Any,
    Word::All,
    Word::Returns,
    Word::OrFailsWith,
    Word::Needs,
    Word::ForAny,
    Word::With,
    Word::And,
    Word::Or,
    Word::Is,
    Word::Fails,
];

type ParseResult<T> = Result<T, ()>;

impl<'s> Parser<'s> {
    // ------------------------------------------------------------ cursor

    /// The column of an offset. Used only to resynchronise after a parse
    /// error (`skip_to_next_item`); the grammar gives indentation no meaning.
    fn column(&self, offset: usize) -> usize {
        let line_start = self.src[..offset].rfind('\n').map_or(0, |index| index + 1);
        self.src[line_start..offset].chars().count()
    }

    fn raw(&self) -> &Token {
        &self.tokens[self.pos]
    }

    /// The next significant token, skipping line breaks that the layout rules
    /// make insignificant (open brackets, continuation lines).
    fn peek(&mut self) -> &Token {
        loop {
            if self.tokens[self.pos].kind != TokenKind::Newline {
                return &self.tokens[self.pos];
            }
            let mut next = self.pos;
            while self.tokens[next].kind == TokenKind::Newline {
                next += 1;
            }
            let token = &self.tokens[next];
            if self.nesting > 0 || self.continues(token) {
                self.pos = next;
            } else {
                return &self.tokens[self.pos];
            }
        }
    }

    /// A line break before a continuation word carries no meaning, whatever
    /// the indentation of the line.
    fn continues(&self, token: &Token) -> bool {
        matches!(&token.kind, TokenKind::Word(word) if CONTINUATION_WORDS.contains(word))
    }

    /// Look past the next significant token without moving.
    fn peek_second(&mut self) -> &Token {
        self.peek();
        let mut index = self.pos + 1;
        if self.nesting > 0 {
            while self.tokens[index].kind == TokenKind::Newline {
                index += 1;
            }
        }
        &self.tokens[index]
    }

    fn at(&mut self, kind: &TokenKind) -> bool {
        &self.peek().kind == kind
    }

    fn at_word(&mut self, word: Word) -> bool {
        self.peek().kind == TokenKind::Word(word)
    }

    fn advance(&mut self) -> Token {
        self.peek();
        let token = self.tokens[self.pos].clone();
        if token.kind != TokenKind::Eof {
            self.pos += 1;
        }
        token
    }

    fn eat(&mut self, kind: &TokenKind) -> bool {
        if self.at(kind) {
            self.advance();
            true
        } else {
            false
        }
    }

    fn eat_word(&mut self, word: Word) -> bool {
        self.eat(&TokenKind::Word(word))
    }

    fn expect(&mut self, kind: &TokenKind, what: &str) -> ParseResult<Token> {
        if self.at(kind) {
            Ok(self.advance())
        } else {
            let span = self.peek().span;
            let found = self.describe(span);
            self.error("expected", format!("expected {what}, found {found}"), span);
            Err(())
        }
    }

    fn expect_word(&mut self, word: Word) -> ParseResult<Token> {
        self.expect(&TokenKind::Word(word), &format!("`{}`", word.spelling()))
    }

    fn describe(&self, span: Span) -> String {
        let token = &self.tokens[self.pos];
        match &token.kind {
            TokenKind::Newline => "the end of the line".to_string(),
            TokenKind::Eof => "the end of the file".to_string(),
            _ => format!("`{}`", &self.src[span.start..span.end]),
        }
    }

    fn error(&mut self, code: &'static str, message: impl Into<String>, span: Span) {
        self.diagnostics
            .push(Diagnostic::error(code, message, span));
    }

    /// Skip to the start of the next line, after an error.
    fn recover(&mut self) {
        while !matches!(self.raw().kind, TokenKind::Newline | TokenKind::Eof) {
            self.pos += 1;
        }
        self.nesting = 0;
    }

    /// Consume line breaks at a point where statements may start.
    fn skip_newlines(&mut self) {
        while self.raw().kind == TokenKind::Newline {
            self.pos += 1;
        }
    }

    /// A statement or clause ends here: a line break, the end of the file, or a
    /// block delimiter on the same line (`if done then break end`).
    fn end_of_statement(&mut self) -> ParseResult<()> {
        match &self.raw().kind {
            TokenKind::Newline => {
                self.skip_newlines();
                Ok(())
            }
            TokenKind::Eof => Ok(()),
            TokenKind::Word(Word::End)
            | TokenKind::Word(Word::Otherwise)
            | TokenKind::Word(Word::When) => Ok(()),
            _ => {
                let span = self.raw().span;
                let found = self.describe(span);
                self.error(
                    "expected",
                    format!("expected the end of the line, found {found}"),
                    span,
                );
                Err(())
            }
        }
    }

    /// After `be` or `to` the value must follow, so a line break there carries
    /// no meaning and the value may start on the next line.
    fn skip_newlines_before_value(&mut self) {
        self.skip_newlines();
    }

    fn text_of(&self, token: &Token) -> String {
        token.text(self.src).to_string()
    }

    // ------------------------------------------------------------ module

    fn module(&mut self) -> Module {
        let start = self.peek().span.start;
        let mut module = Module {
            name: Vec::new(),
            docs: Docs::default(),
            imports: Vec::new(),
            items: Vec::new(),
            comments: Vec::new(),
            span: Span::default(),
        };
        self.skip_newlines();
        if self.at_word(Word::Module) {
            self.advance();
            if let Ok(path) = self.dotted_name() {
                module.name = path;
            }
            let _ = self.end_of_statement();
            module.docs = self.doc_clauses();
        } else {
            let span = self.peek().span;
            self.error("module-header", "a file starts with `module name`", span);
        }
        loop {
            self.skip_newlines();
            if self.at(&TokenKind::Eof) {
                break;
            }
            if self.at_word(Word::Import) {
                if let Ok(import) = self.import() {
                    module.imports.push(import);
                } else {
                    self.recover();
                }
                continue;
            }
            match self.item() {
                Ok(item) => module.items.push(item),
                Err(()) => {
                    self.recover();
                    self.skip_newlines();
                    self.skip_to_next_item();
                }
            }
        }
        module.span = Span::new(start, self.src.len());
        module
    }

    /// After a failed item, skip lines until one starts a new top-level item.
    /// The column test only steers this recovery (a `function` at the margin
    /// rather than one inside an ability); it gives indentation no meaning.
    fn skip_to_next_item(&mut self) {
        loop {
            match &self.raw().kind {
                TokenKind::Eof => return,
                TokenKind::Word(word)
                    if matches!(
                        word,
                        Word::Public
                            | Word::Function
                            | Word::Type
                            | Word::Ability
                            | Word::Test
                            | Word::Let
                            | Word::Import
                    ) && self.column(self.raw().span.start) == 0 =>
                {
                    return
                }
                _ => {
                    self.recover();
                    self.skip_newlines();
                }
            }
        }
    }

    fn dotted_name(&mut self) -> ParseResult<Vec<Name>> {
        let mut path = vec![self.identifier("a module name")?];
        while self.eat(&TokenKind::Dot) {
            let token = self.advance();
            match token.kind {
                TokenKind::Member | TokenKind::Identifier => path.push(Name {
                    text: self.text_of(&token),
                    span: token.span,
                }),
                _ => {
                    self.error("expected", "expected a name after the dot", token.span);
                    return Err(());
                }
            }
        }
        Ok(path)
    }

    fn import(&mut self) -> ParseResult<Import> {
        let start = self.advance().span;
        let path = self.dotted_name()?;
        let mut alias = None;
        let mut exposing = Vec::new();
        if self.eat_word(Word::As) {
            alias = Some(self.identifier("an alias")?);
        }
        if self.eat_word(Word::Exposing) {
            exposing.push(self.type_name("a type or ability name")?);
            while self.eat(&TokenKind::Comma) {
                exposing.push(self.type_name("a type or ability name")?);
            }
        }
        let end = self.tokens[self.pos - 1].span;
        self.end_of_statement()?;
        Ok(Import {
            path,
            alias,
            exposing,
            span: start.join(end),
        })
    }

    /// Documentation clauses on the lines after a head, each known by its
    /// clause word.
    fn doc_clauses(&mut self) -> Docs {
        let mut docs = Docs::default();
        loop {
            self.skip_newlines();
            let token = self.raw().clone();
            match token.kind {
                TokenKind::Word(
                    word @ (Word::Purpose | Word::Tags | Word::SeeAlso | Word::Deprecated),
                ) => {
                    self.advance();
                    let _ = self.expect(&TokenKind::Colon, "`:`");
                    let text = match self.raw().kind.clone() {
                        TokenKind::ClauseText(text) => {
                            self.advance();
                            text
                        }
                        _ => String::new(),
                    };
                    match word {
                        Word::Purpose => docs.purpose = Some(text),
                        Word::Tags => docs.tags = split_list(&text),
                        Word::SeeAlso => docs.see_also = split_list(&text),
                        _ => docs.deprecated = Some(text),
                    }
                    let _ = self.end_of_statement();
                }
                TokenKind::Word(Word::ExposeAsTool) => {
                    self.advance();
                    docs.expose_as_tool = true;
                    let _ = self.end_of_statement();
                }
                TokenKind::Word(Word::Example) => {
                    self.advance();
                    let _ = self.expect(&TokenKind::Colon, "`:`");
                    match self.example(token.span.start) {
                        Ok(example) => docs.examples.push(example),
                        Err(()) => self.recover(),
                    }
                    let _ = self.end_of_statement();
                }
                _ => break,
            }
        }
        docs
    }

    fn example(&mut self, start: usize) -> ParseResult<Example> {
        let expression = self.expr()?;
        let (expression, outcome) = match expression.kind {
            ExprKind::Binary {
                op: BinaryOp::Is,
                left,
                right,
            } => (*left, ExampleOutcome::Is(*right)),
            _ => {
                if self.eat_word(Word::Fails) {
                    self.expect_word(Word::With)?;
                    let pattern = self.pattern()?;
                    (expression, ExampleOutcome::FailsWith(pattern))
                } else {
                    let span = expression.span;
                    self.error(
                        "example-shape",
                        "an example is `expression is value` or `expression fails with Pattern`",
                        span,
                    );
                    return Err(());
                }
            }
        };
        let end = self.tokens[self.pos - 1].span;
        Ok(Example {
            expression,
            outcome,
            span: Span::new(start, end.end),
        })
    }

    // ------------------------------------------------------------ items

    fn item(&mut self) -> ParseResult<Item> {
        let start = self.peek().span.start;
        let public = self.eat_word(Word::Public);
        let token = self.peek().clone();
        match token.kind {
            TokenKind::Word(Word::Function) => {
                let with_body = !self.declarations;
                self.function(public, start, with_body).map(Item::Function)
            }
            TokenKind::Word(Word::Type) => self.type_def(public, start).map(Item::Type),
            TokenKind::Word(Word::Ability) => self.ability(public, start),
            TokenKind::Word(Word::Let) => self.constant(public, start).map(Item::Constant),
            TokenKind::Word(Word::Test) if !public => self.test(start).map(Item::Test),
            _ => {
                let found = self.describe(token.span);
                self.error(
                    "expected",
                    format!("expected `function`, `type`, `ability`, `let` or `test` at the top level, found {found}"),
                    token.span,
                );
                Err(())
            }
        }
    }

    fn function(&mut self, public: bool, start: usize, with_body: bool) -> ParseResult<Function> {
        self.expect_word(Word::Function)?;
        let name = self.method_or_function_name()?;
        let params = self.params()?;
        let (returns, fails, needs, type_params) = self.signature_clauses()?;
        self.end_of_statement()?;
        let docs = self.doc_clauses();
        let body = if with_body {
            let block = self.block(&[Word::End])?;
            self.expect_word(Word::End)?;
            Some(block)
        } else {
            None
        };
        let end = self.tokens[self.pos - 1].span.end;
        if with_body {
            self.end_of_statement()?;
        }
        Ok(Function {
            public,
            name,
            params,
            returns,
            fails,
            needs,
            type_params,
            docs,
            body,
            span: Span::new(start, end),
        })
    }

    /// A function name. A method, whose first parameter is `self`, is only
    /// ever called after a dot, so like a member name it may be any word,
    /// reserved words included (`first`, `at`, `set`, `sum`, `repeat`).
    fn method_or_function_name(&mut self) -> ParseResult<Name> {
        let token = self.peek().clone();
        let is_method = matches!(token.kind, TokenKind::Word(_))
            && self.tokens.get(self.pos + 1).map(|t| &t.kind) == Some(&TokenKind::LeftParen)
            && self.tokens.get(self.pos + 2).map(|t| &t.kind)
                == Some(&TokenKind::Word(Word::SelfValue));
        if is_method {
            self.advance();
            return Ok(Name {
                text: self.src[token.span.start..token.span.end].to_string(),
                span: token.span,
            });
        }
        self.identifier("a function name")
    }

    fn params(&mut self) -> ParseResult<Vec<Param>> {
        self.expect(&TokenKind::LeftParen, "`(`")?;
        self.nesting += 1;
        let mut params = Vec::new();
        while !self.at(&TokenKind::RightParen) {
            let token = self.peek().clone();
            let param = match token.kind {
                TokenKind::Word(Word::SelfValue) => {
                    self.advance();
                    let name = Name {
                        text: "self".into(),
                        span: token.span,
                    };
                    let ty = if self.eat(&TokenKind::Colon) {
                        Some(self.type_()?)
                    } else {
                        None
                    };
                    let end = self.tokens[self.pos - 1].span;
                    Param {
                        name,
                        ty,
                        span: token.span.join(end),
                    }
                }
                _ => {
                    let name = self.identifier("a parameter name")?;
                    self.expect(&TokenKind::Colon, "`:` and the parameter type")?;
                    let ty = self.type_()?;
                    let span = name.span.join(ty.span());
                    Param {
                        name,
                        ty: Some(ty),
                        span,
                    }
                }
            };
            params.push(param);
            if !self.eat(&TokenKind::Comma) {
                break;
            }
        }
        self.nesting -= 1;
        self.expect(&TokenKind::RightParen, "`)`")?;
        Ok(params)
    }

    #[allow(clippy::type_complexity)]
    fn signature_clauses(
        &mut self,
    ) -> ParseResult<(Option<Type>, Vec<Type>, Vec<Capability>, Option<ForAny>)> {
        let mut returns = None;
        let mut fails = Vec::new();
        let mut needs = Vec::new();
        let mut type_params = None;
        if self.eat_word(Word::Returns) {
            returns = Some(self.type_()?);
        }
        if self.eat_word(Word::OrFailsWith) {
            fails.push(self.type_()?);
            while self.eat_word(Word::Or) {
                fails.push(self.type_()?);
            }
        }
        if self.eat_word(Word::Needs) {
            needs = self.capabilities()?;
        }
        if self.at_word(Word::ForAny) {
            type_params = Some(self.for_any()?);
        }
        Ok((returns, fails, needs, type_params))
    }

    fn capabilities(&mut self) -> ParseResult<Vec<Capability>> {
        let mut capabilities = Vec::new();
        loop {
            let start = self.peek().span;
            let (path, scope) = self.capability_path()?;
            let budget = if self.at_word(Word::AtMost) {
                Some(self.budget()?)
            } else {
                None
            };
            let mut only_to = Vec::new();
            if self.eat_word(Word::OnlyTo) {
                loop {
                    let sink_start = self.peek().span;
                    let (sink_path, sink_scope) = self.capability_path()?;
                    let sink_end = self.tokens[self.pos - 1].span;
                    only_to.push(Sink {
                        path: sink_path,
                        scope: sink_scope,
                        span: sink_start.join(sink_end),
                    });
                    if !self.eat_word(Word::Or) {
                        break;
                    }
                }
            }
            let end = self.tokens[self.pos - 1].span;
            capabilities.push(Capability {
                path,
                scope,
                budget,
                only_to,
                span: start.join(end),
            });
            // in a function type inside a parameter list, a comma before
            // `name:` starts the next parameter, not another capability
            if !self.at(&TokenKind::Comma) || self.parameter_follows_comma() {
                break;
            }
            self.advance();
        }
        Ok(capabilities)
    }

    /// Whether the token after the comma at hand starts a parameter or a
    /// field (`name:`), looking past the newlines a parenthesised list allows.
    fn parameter_follows_comma(&mut self) -> bool {
        self.peek();
        let mut index = self.pos + 1;
        if self.nesting > 0 {
            while self.tokens[index].kind == TokenKind::Newline {
                index += 1;
            }
        }
        if self.tokens[index].kind != TokenKind::Identifier {
            return false;
        }
        index += 1;
        if self.nesting > 0 {
            while self.tokens[index].kind == TokenKind::Newline {
                index += 1;
            }
        }
        self.tokens[index].kind == TokenKind::Colon
    }

    /// `filesystem.read("data")`: a capability path with an optional scope.
    fn capability_path(&mut self) -> ParseResult<(Vec<Name>, Option<String>)> {
        let path = self.dotted_name()?;
        let mut scope = None;
        if self.eat(&TokenKind::LeftParen) {
            let token = self.advance();
            match token.kind {
                TokenKind::Text { parts, .. } => scope = Some(literal_text(&parts)),
                TokenKind::RawText(text) => scope = Some(text),
                _ => {
                    self.error(
                        "capability-scope",
                        "a capability scope is a text literal",
                        token.span,
                    );
                    return Err(());
                }
            }
            self.expect(&TokenKind::RightParen, "`)`")?;
        }
        Ok((path, scope))
    }

    /// `at most 60 per minute` (decision P2).
    fn budget(&mut self) -> ParseResult<Budget> {
        let start = self.expect_word(Word::AtMost)?.span;
        let count_token = self.advance();
        if count_token.kind != TokenKind::Integer {
            self.error(
                "expected",
                "expected a whole number after `at most`",
                count_token.span,
            );
            return Err(());
        }
        let count = self.text_of(&count_token);
        self.expect_word(Word::Per)?;
        let unit_token = self.advance();
        let unit = self.text_of(&unit_token);
        if !matches!(unit.as_str(), "second" | "minute" | "hour" | "day" | "run") {
            self.error(
                "expected",
                format!(
                    "a budget is per `second`, `minute`, `hour`, `day` or `run`, found `{unit}`"
                ),
                unit_token.span,
            );
            return Err(());
        }
        Ok(Budget {
            count,
            per: Name {
                text: unit,
                span: unit_token.span,
            },
            span: start.join(unit_token.span),
        })
    }

    fn for_any(&mut self) -> ParseResult<ForAny> {
        let start = self.expect_word(Word::ForAny)?.span;
        let mut params = vec![self.type_name("a type parameter")?];
        while self.eat(&TokenKind::Comma) {
            params.push(self.type_name("a type parameter")?);
        }
        let mut constraints = Vec::new();
        if self.eat_word(Word::Where) {
            loop {
                let param = self.type_name("a type parameter")?;
                self.expect_word(Word::Can)?;
                let ability = self.type_()?;
                constraints.push(Constraint { param, ability });
                if !self.eat_word(Word::And) {
                    break;
                }
            }
        }
        let end = self.tokens[self.pos - 1].span;
        Ok(ForAny {
            params,
            constraints,
            span: start.join(end),
        })
    }
